Basic 3 models were done admin model , aluminis model , students model

--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,4 +1,13 @@
-
-<footer class="text-center">
+<style>
+  .bottom {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: #f1f1f1; /* Optional styling */
+  }
+  
+</style>
+<footer class="text-center bottom">
     <p>&copy; 2024 Student Connect. All Rights Reserved.</p>
   </footer>
